# spectr

./: .gitignore  CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  main.cpp  pulp.toml.example  run-native.sh  spectr.hpp  test_spectr.cpp  vst3_entry.cpp
.github/workflows/: native-bridge-smoke.yml
.shipyard/: config.toml
include/spectr/: band_state.hpp  edit_engine.hpp  edit_modes.hpp  editor_bridge.hpp  engine.hpp  host_bridge.hpp  pattern.hpp  preset_format.hpp  snapshot.hpp  spectr.hpp  viewport.hpp  windowed_stft_engine.hpp
include/spectr/ui/: band_field_view.hpp  editor_view.hpp  native_editor_view.hpp
native-react/: canvas2d-shim.ts  dom-adapter.tsx  editor-port.tsx  editor.tsx  g3-pulp-react.tsx  g3-via-adapter.tsx  g5-with-shims.tsx  g6-inheritance.tsx  g7-absolute.tsx  host-shims.ts  jsx-runtime-shim.ts  package-lock.json  package.json  regen-asset.py  runtime-import-loader.tsx  shim.js  spectr-editor-extracted.js  tsconfig.json
native-react/extracted/: classnames.json  tokens.json
native-react/repros/: README.md  repro-1147-popover-render.tsx  repro-1148-overlay-clicks.tsx
native-react/tools/: screencap-spectr.sh
native-react/tools/extract-html-bundle/: extract.mjs
native-react/tools/patches/: pulp-react-font-dispatch.patch
native-react/tools/pulp-bridge-coverage/: package-lock.json  package.json  tsconfig.json
native-react/tools/pulp-bridge-coverage/src/: cli.ts  extract.ts  known-canvas2d.ts  parse-bridge.ts  parse-shim.ts  report.ts
native-react/tools/pulp-css-analyze/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
native-react/tools/pulp-css-analyze/src/: ai-suggest.ts  cli.ts  extract.ts  known-bridge.ts  known-css.ts  report.ts
native-react/tools/pulp-css-analyze/test/: extract.test.ts
planning/: README.md  Spectr-Agent-Coordination-Protocol.md  Spectr-Build-Blockers.md  Spectr-Build-Signoff.md  Spectr-Cutover-Gap-Tracker.md  Spectr-M11-Slice2-Design.md  Spectr-Native-React-Bridge-Spec.md  Spectr-Pulp-Handoff.md  Spectr-Reimport-Safe-Loop-Spec.md  Spectr-Review-Agent-Prompt.md  Spectr-Sampler-Phase-Spec.md  Spectr-Status.md  Spectr-UI-Park-Notes.md  Spectr-Upstream-Integration-Plan.md  Spectr-V1-Build-Plan.md  Spectr-V1-Product-Spec.md  Spectr-V2-Product-Spec.md  Spectr-V2-Pulp-Handoff.md  Spectr-V2-Review-Notes.md  Spectr-V3-Review-Agent-Prompt.md  Spectr-V3-Review-Notes.md  audit-2026-04-30-native-vs-webview.md  audit-2026-05-03-v0.69.1-delta.md  audit-2026-05-03-webview-vs-native-v0.69.1.md  dev-loop-retrospective.md  spectr-parity-status-A-J.md  spectr-style-coverage-report.md
planning/.watch/: CHANGELOG.md  last-poll.txt  state-2026-05-03.txt  watch-list.txt
planning/reimport/: SKILL-import-design-proposed-edit.md  open-design-assessment.md  repo-audit.md  status-2026-05-08-native-bridge-hardening.md
planning/screenshots/: README.md  spectr-editor-native-handcrafted.ui.js
resources/: editor.html
src/: block_fft_engine.cpp  edit_engine.cpp  editor_bridge.cpp  engine_factory.cpp  host_bridge.cpp  pattern.cpp  preset_format.cpp  snapshot.cpp  spectr.cpp  windowed_stft_engine.cpp
src/ui/: band_field_view.cpp  editor_view.cpp  native_editor_view.cpp
test/: test_analyzer_bridge.cpp  test_band_state.cpp  test_block_fft_engine.cpp  test_edit_engine.cpp  test_editor_bridge.cpp  test_engine_factory.cpp  test_m4_state.cpp  test_pattern.cpp  test_preset.cpp  test_snapshot.cpp  test_spectr.cpp  test_viewport.cpp  test_windowed_stft_engine.cpp
tools/: install-shipyard.sh  shipyard.toml  validate-formats.sh
